--- a/styles/main.css
+++ b/styles/main.css
@@ -21,11 +21,13 @@ h1 {
 .nav {
   display: flex;
   justify-content: center;
+  backdrop-filter: blur(5px);
   margin: 20px auto;
   border-radius: 50px;
   box-shadow: 0px 0px 10px #0000006e;
   align-items: center;
-  background-color: rgb(64 173 190 / 20%);
+  z-index: 100;
+  background-color: rgba(64, 173, 190, 0.323);
 }
 @media only screen and (max-width: 740px) {
   .nav {
@@ -85,6 +87,7 @@ article {
   border-radius: 3px;
   margin-bottom: 10px;
   position: relative;
+  backdrop-filter: blur(6px);
 }
 
 .info {
@@ -108,6 +111,7 @@ form {
   border-radius: 3px;
   display: flex;
   flex-direction: column;
+  backdrop-filter: blur(5px);
 }
 
 form div {
