--- a/styles/main.css
+++ b/styles/main.css
@@ -38,7 +38,14 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  background-color: rgba(64, 173, 190, 0.323);
+  backdrop-filter: blur(6px);
   text-shadow: 0px 0px 4px;
+  height: 150px;
+  width: 444px;
+  padding: 10px;
+  border-radius: 10px;
+  justify-content: space-evenly;
 }
 
 .nav_list {
@@ -70,7 +77,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: #fff;
+  color: #00000063;
 }
 
 .cotacts_link {
