--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -16,7 +16,7 @@
       <marquee direction="left">
         <h3 class="string">
           You can order a site by calling the number, as well as writing to the
-          postal address 😉
+          e-mail 😉
         </h3></marquee
       >
     </div>
