--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ h1 {
   backdrop-filter: blur(5px);
   margin: 20px auto;
   border-radius: 50px;
-  box-shadow: 0px 0px 10px #0000006e;
+  box-shadow: 0px 0px 20px inset;
   align-items: center;
   z-index: 100;
   background-color: rgba(64, 173, 190, 0.323);
@@ -39,6 +39,7 @@ h1 {
   flex-direction: column;
   gap: 20px;
   background-color: rgba(64, 173, 190, 0.323);
+  box-shadow: 0px 0px 20px inset;
   backdrop-filter: blur(6px);
   text-shadow: 0px 0px 4px;
   height: 150px;
@@ -64,7 +65,7 @@ nav a {
   display: block;
   padding: 5px 15px;
   line-height: 60px;
-  text-shadow: 0px 0px 3px black;
+  text-shadow: 0px 0px 1px black;
 }
 
 li {
@@ -89,7 +90,7 @@ a:hover {
 
 article {
   background-color: rgb(64 173 190 / 20%);
-  box-shadow: 0px 0px 10px #0000005e;
+  box-shadow: 0px 0px 10px inset;
   padding: 10px 20px;
   border-radius: 3px;
   margin-bottom: 10px;
@@ -113,7 +114,7 @@ h2 a {
 
 form {
   background-color: rgb(64 173 190 / 20%);
-  box-shadow: 0px 0px 10px #00000066;
+  box-shadow: 0px 0px 10px inset;
   padding: 10px 20px;
   border-radius: 3px;
   display: flex;
