--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,18 @@
       <%- include('./partials/nav.ejs') %>
       <h1 class="home_title">Personal Blog</h1>
       <p class="home_description">Build with Node.js Express, EJS, MongoDB</p>
+      <p class="home_description">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque ipsa
+        sint ducimus, ea tenetur dicta, sunt sapiente natus nesciunt dolore
+        numquam eos ratione dolor? Animi, ullam. Aut harum quo saepe? Lorem
+        ipsum dolor sit amet consectetur adipisicing elit. Sapiente itaque neque
+        nostrum, consequuntur ea recusandae non molestiae vel odio? Ratione
+        voluptas, error esse tempora vel optio autem temporibus aut voluptate?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero velit ea
+        accusamus mollitia at exercitationem deserunt impedit tempore, quo
+        maiores! Odit eos pariatur assumenda numquam quod provident quidem quis
+        voluptatem.
+      </p>
     </div>
   </body>
 </html>
